[package]
name = "missile-command"
version = "0.1.0"
edition = "2021"
description = "A simple missile command game clone from 80's Atari. The aim is to develop games using the Macroquad game engine and to learn some basic mathematical instruments."
authors = ["Burak Selim Senyurt<burakselimsenyurt@gmail.com>"]

[dependencies]
macroquad = "0.3.25"
